dfir_rs/tests/compile-fail/stable/surface_loop_defer_tick_lazy.stderr
error: `batch` must have exactly 1 output(s), actually has 0.
 --> tests/compile-fail/stable/surface_loop_defer_tick_lazy.rs:3:31
  |
3 |         source_iter(0..10) -> batch();
  |                               ^^^^^

error: `batch` must have exactly 1 input(s), actually has 0.
 --> tests/compile-fail/stable/surface_loop_defer_tick_lazy.rs:5:13
  |
5 |             batch() -> defer_tick_lazy() -> null();
  |             ^^^^^

error: Operator `defer_tick_lazy(...)` is not allowed within a `loop { ... }` context. Use `defer_loop()` or `defer_loop_lazy()` instead.
 --> tests/compile-fail/stable/surface_loop_defer_tick_lazy.rs:5:24
  |
5 |             batch() -> defer_tick_lazy() -> null();
  |                        ^^^^^^^^^^^^^^^

error: Windowing operator `batch(...)` must be the first input operator into a `loop { ... } context.
 --> tests/compile-fail/stable/surface_loop_defer_tick_lazy.rs:3:31
  |
3 |         source_iter(0..10) -> batch();
  |                               ^^^^^
